# cocos2d-x-lite

./: .gitignore  .travis.yml  CMakeLists.txt
cmake/Modules/: CocosBuildHelpers.cmake  CocosBuildSet.cmake  CocosConfigDefine.cmake  CocosConfigDepend.cmake
cocos/: Android.mk  CMakeLists.txt
cocos/2d/: CCFontAtlas.cpp  CCFontAtlas.h  CCFontFreetype.cpp  CCFontFreetype.h  CCLabelLayout.cpp  CCLabelLayout.h  CCTTFLabelAtlasCache.cpp  CCTTFLabelAtlasCache.h  CCTTFLabelRenderer.cpp  CCTTFLabelRenderer.h  CCTTFTypes.cpp  CCTTFTypes.h
cocos/audio/: CMakeLists.txt
cocos/audio/apple/: AudioEngine-inl.mm
cocos/audio/win32/: AudioPlayer.h
cocos/editor-support/: CMakeLists.txt  MeshBuffer.cpp
cocos/editor-support/spine/: CMakeLists.txt
cocos/network/: CMakeLists.txt  WebSocketServer.cpp  WebSocketServer.h
cocos/platform/: CMakeLists.txt
cocos/platform/apple/: CCCanvasRenderingContext2D-apple.mm
cocos/platform/mac/: CCApplication-mac.mm
cocos/platform/win32/: CCStdC-win32.cpp
cocos/renderer/: CMakeLists.txt
cocos/scripting/: CMakeLists.txt
cocos/scripting/js-bindings/auto/: jsb_cocos2dx_auto.cpp  jsb_cocos2dx_auto.hpp  jsb_cocos2dx_spine_auto.cpp  jsb_cocos2dx_spine_auto.hpp  jsb_video_auto.cpp
cocos/scripting/js-bindings/auto/api/: jsb_cocos2dx_auto_api.js  jsb_cocos2dx_spine_auto_api.js
cocos/scripting/js-bindings/jswrapper/: config.hpp
cocos/scripting/js-bindings/jswrapper/jsc/: Class.cpp
cocos/scripting/js-bindings/manual/: jsb_websocket_server.cpp  jsb_websocket_server.hpp
extensions/: CMakeLists.txt
templates/: cocos2dx_files.json
templates/js-template-default/frameworks/runtime-src/: CMakeLists.txt
templates/js-template-link/: cocos-project-template.json
templates/js-template-link/frameworks/runtime-src/: CMakeLists.txt
templates/js-template-link/frameworks/runtime-src/proj.android-studio/: gradle.properties
templates/js-template-link/frameworks/runtime-src/proj.android-studio/app/: build.gradle
templates/js-template-link/frameworks/runtime-src/proj.ios_mac/ios/: Info.plist  SDKWrapper.h
templates/js-template-link/frameworks/runtime-src/proj.ios_mac/ios/service/: SDKDelegate.h
tools/tojs/: cocos2dx.ini  cocos2dx_video.ini  genbindings.py
tools/travis-scripts/: generate-bindings.sh  generate-cocosfiles.sh
